15.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: mypod
  labels:
    app: test
spec:
  nodeName: node2
  containers:
   - name: mukul
     image: nginx
