16.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: mypod2
  labels:
    app: test
spec:
  nodeSelector:
    disk: ssd
  containers:
   - name: mypod2
     image: nginx
