17.yml
apiVersion: v1
kind: Pod 
metadata:
  name: mypod2
  labels:
    app: test
spec:
  containers:
   - name: mypod2
     image: nginx
  tolerations:
  - key: maa
    operator: "Equal"
    value: training
    effect: NoSchedule
