23-deployment-with-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mayank
  name: mayank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mayank
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mayank
    spec:
      volumes:
      - name:  myvol
        persistentVolumeClaim:
          claimName: mypvc
      containers:
      - image: httpd
        name: httpd
        volumeMounts:
        - name: myvol
          mountPath: /usr/local/apache2/htdocs/
