789.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mukul2
  name: mukul2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mukul2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mukul2
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: 
          requests:
            memory: 200Mi
            cpu: 400m
          limits:
            memory: 400Mi
            cpu: 600m
