envconfigmap.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mydb1
  name: mydb1
spec:
  containers:
  - envFrom:
    - configMapRef:
        name: mukul
    image: mysql
    name: mydb1
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
