envdb.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mydb1
  name: mydb1
spec:
  containers:
  - env:
    - name: MYSQL_ROOT_PASSWORD
      value: redhat
    - name: MYSQL_DATABASE
      value: training
    - name: MYSQL_USER
      value: hcl
    - name: MYSQL_PASSWORD
      value: qwerty
    image: mysql
    name: mydb1
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
