envsecretgeneric.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mydb2
  name: mydb2
spec:
  containers:
  - envFrom:
    - secretRef:
        name: mukul
    image: mysql
    name: mydb2
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
