q1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test1
  name: test1
spec:
  nodeName: node3
  containers:
  - image: httpd
    name: test1
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
