q3.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test1
  name: test1
spec:

   
  containers:
  - image: httpd
    name: test1
  tolerations:
  - key: mukul
    operator: "Equal"
    value: narwani
    effect: NoSchedule
