tm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    app: test
spec:
  containers:
  - name: mukul
    image: nginx
