LB.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mukul
  name: mukul
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mukul
  type: LoadBalancer
status:
  loadBalancer: {}
