deployment-withlimit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mukul
  name: mukul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mukul
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mukul
    spec:
      containers:
      - image: mukulnarwani2259/mukulimage:final
        name: mukulimage
        resources:
          requests:
            memory: 5Mi
          limits:
            memory: 300Mi

---
apiVersion: v1
kind: Service
metadata:
  name: mukul
  labels:
  run: mukul
  spec:
  ports:
  - port: 80
  selctor:
  run: mukul
