newdeployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
 name: php-apache 
spec: 
 selector: 
  matchLabels: 
    run: php-apache 
 replicas: 1 
 template: 
  metadata: 
    labels: 
      run: php-apache 
  spec: 
    containers: 
    - name: php-apache 
      image: k8s.gcr.io/hpa-example  
      ports: 
      - containerPort: 80 
      resources: 
        limits: 
          cpu: 500m 
          requests: 
          cpu: 200m 
---
apiVersion: v1 
kind: Service 
metadata: 
 name: php-apache 
 labels: 
  run: php-apache 
spec: 
 ports: 
 - port: 80 
 selector: 
  run: php-apache
